[package]
authors = ["Tom Conder <tom@itstom.co>"]
description = """
A spell checker based on the probabilistic algorithm described by Peter Norvig
in http://norvig.com/spell-correct.html
"""
edition = "2024"
license = "MIT"
name = "spellchecker"
readme = "README.md"
repository = "https://github.com/tomconder/spellchecker"
version = "0.1.0"

[dependencies]
regex = "1.11.1"
